--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -25,7 +25,7 @@
 \end{textblock} {\Large The official reference for developing and
   deploying parallel, scalable OpenGL\texttrademark\ applications based on
   the Equalizer parallel rendering framework}\\\vspace{1cm}
-Version 1.7.3 for Equalizer 0.9.1\\[\medskipamount]
+Version 1.7.4 for Equalizer 0.9.1+svn\\[\medskipamount]
 %  \today
 }
 
@@ -58,7 +58,7 @@ Version 1.7.3 for Equalizer 0.9.1\\[\medskipamount]
 
 Written by Stefan Eilemann.\\
 Engineering contributions by Maxim Makhinya, Jonas B\"osch, Christian
-Marten, Sarah Amsellem, Patrick Bouchaud and Philippe Robert.
+Marten, Sarah Amsellem, Patrick Bouchaud, Philippe Robert and Robert Hauck.
 
 \subsection*{Copyright}
 
@@ -132,6 +132,7 @@ Subpixel (FSAA) [top left], DPlex [middle left], Pixel [middle center],
     1.7.1   & Oct 20, 2009 & Updates for new eq::GLWindow\\
     1.7.2   & Nov 18, 2009 & Add \sref{sSubpixel} and \sref{sFSAA} for Subpixel compounds\\
     1.7.3   & Feb 02, 2010 & Revision for Equalizer 0.9.1\\
+    1.7.4   & Feb 22, 2010 & Add \sref{sSlaveCommit}\\
     \hline
   \end{tabularx}}
 \clearpage
@@ -1738,110 +1739,13 @@ implementation of data distribution in a cluster
 environment. Distributed objects are created by subclassing from
 \textsf{eq::Object} or \textsf{eq::net::Object}. The application
 programmer implements serialization and deserialization of the
-distributed data.
+distributed data. \sref{sNetObject2} covers distributed objects in detail.
 
-Objects are dynamically assigned to a session, which assigns
-session-unique identifiers to objects and manages the network
-communication between different instances of the same distributed
-object.
-
-The master version of a distributed object is registered with a
-\textsf{eq::net::Session}, which assigns a session-unique identifier to
-the object. This identifier can be used by other nodes to map their
-instance of the object, thus synchronizing the object's data with the
-remotely registered master version.
-
-Distributed objects can be static (immutable) or dynamic. Dynamic
-objects are versioned.
-
-The \textsf{eqPly} example uses static distributed objects to provide
-initial data and the model to all rendering nodes, as well as a
-versioned object to provide frame-specific data such as the camera
-position to the rendering methods.
-
-\subsubsection{Common Usage}
-
-\begin{wrapfigure}{r}{.382\textwidth}
-%\begin{figure}[h!t]
-  \subfigure[]{\label{fObjectDist1}
-    \includegraphics[width=.382\textwidth]{images/umlObjectSubclass}}\hfil
-  \subfigure[]{\label{fObjectDist2}
-    \includegraphics[width=.382\textwidth]{images/umlObjectProxy}}\hfil
-  \subfigure[]{\label{fObjectDist3}
-    \includegraphics[width=.382\textwidth]{images/umlObjectMI}}%
-  {\caption{\label{fObjectDist}Object Distribution using Subclassing,
-      Proxies or Multiple Inheritance}}
-\end{wrapfigure}
-Distributed objects are addressed using session-unique identifiers,
-because pointers to other objects cannot be distributed directly; they
-have no meaning on remote nodes. The session used to register
-distributed objects is normally the \textsf{eq::Config}, which is
-sub-classed from \textsf{eq::net::Session}.
-
-The entry point for shared data on a render client is the identifier
-passed by the application to \textsf{Config::init}. This identifier
-typically contains the identifier of a static distributed object, and is
-passed by Equalizer to all \textsf{configInit} task methods. Normally
-this initial object is mapped by the render clients in
-\textsf{Node::configInit}. It typically contains identifiers of other
-shared data objects.
-
-The distributed data objects referenced by the initial data object are
-often versioned objects, to keep them in sync with the rendered
-frames. Similar to the initial identifier passed to
-\textsf{Config::init}, an object identifier or object version can be
-passed to \textsf{Config::startFrame}. Equalizer will pass this
-identifier to all \textsf{frameStart} task methods. In \textsf{eqPly},
-the frame-specific data, e.g., the global camera data, is versioned. The
-frame data identifier is passed in the initial data, and the frame data
-version is passed with each new frame request.
-
-There are multiple ways of implementing data distribution for an
-existing C++ class hierarchy:
-\begin{description}
-\item[Subclassing] The classes to be distributed inherit from
-  \textsf{eq::net::Object} and implement the serialization methods. This
-  approach is recommended if the source code of existing classes can be
-  modified. It is used for \textsf{eqPly::InitData} and
-  \textsf{eqPly::FrameData}. (\fig{fObjectDist1})
-\item[Proxies] For each object to be distributed, a proxy object is
-  created which manages data distribution for its associated
-  object. This requires the application to track changes on the object
-  separately from the object itself. The model data distribution of
-  eqPly is using this pattern. (\fig{fObjectDist2})
-\item[Multiple Inheritance] A new class inheriting from the class to be
-  distributed and from \textsf{eq::net::Object} implements the data
-  distribution. This requires the application to instantiate a different
-  type of object instead of the existing object, and to create wrapper
-  methods in the superclass calling the original method and setting the
-  appropriate dirty flags. This pattern is not used in
-  eqPly. (\fig{fObjectDist3})
-\end{description}
-
-\subsubsection{Change Handling}
-
-Equalizer determines the way changes are to be handled by calling
-\textsf{Object::get\-Change\-Type} during the registration of the master
-version of a distributed object. The change type determines the memory
-footprint and the contract for the serialization methods. The following
-change types are possible:
-
-\begin{description}
-  \item[STATIC] The object is not versioned. The instance data is
-    serialized whenever a new slave instance is mapped. No additional
-    data is stored.
-  \item[INSTANCE] The object is versioned, and the instance and delta
-    data is identical, that is, only instance data is
-    serialized. Previous instance data is saved to be able to map old
-    versions.
-  \item[DELTA] The object is versioned, and the delta data is typically
-    smaller than the instance data. Both the delta and instance data are
-    serialized and saved to map old versions.
-  \item[UNBUFFERED] The object is versioned. No data is stored, and no
-    previous versions can be mapped. The instance data is serialized
-    whenever a new slave instance is mapped. The application can choose
-    to use a different, more optimal implementation to pack deltas.
-\end{description}
+Distributed objects can be static (immutable) or dynamic. Dynamic objects are
+versioned. The \textsf{eqPly} example uses static distributed objects to provide
+initial data and the model to all rendering nodes, as well as a versioned object
+to provide frame-specific data such as the camera position to the rendering
+methods.
 
 \subsubsection{\label{sInitData}InitData - a Static Distributed Object}
 
@@ -1900,9 +1804,11 @@ how they want to have changes to be handled. All types of versioned
 objects currently implemented have the following characteristics:
 
 \begin{itemize}
-\item Only the master instance of the object is writable, that is,
-  \textsf{eq::net::Object::com\-mit} can be called only on the master
-  instance to generate a new version.
+\item Only the master instance of the object generates new versions, that is,
+  \textsf{eq::net::Object::com\-mit} should only be called only on the master
+  instance. It is possible to commit on slave instances, but special care has to
+  be taken to handle possible conflicts. \sref{sSlaveCommit} covers slave object
+  commits in detail.
 \item Slave instance versions can only be advanced, that is,
   \textsf{eq::net::Object::sync( version )} with a version smaller than
   the current version will fail.
@@ -2003,6 +1909,10 @@ prefer to load the data only on the application process, and use
 distributed objects to synchronize the scene data with the render
 clients.
 
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/modelDist.pdf}
+  {\caption{\label{fModelDist}Scene Data in eqPly}}
+\end{wrapfigure}
 \textsf{eqPly} uses static distributed objects to distribute the model
 loaded by the application. This approach can be easily extended to
 versioned objects to support dynamic data modifications.
@@ -2015,10 +1925,6 @@ example in a GLUT application. To keep this separation, an external
 \textsf{VertexBufferDist} nodes is responsible for cloning the model
 data on the remote render clients.
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/modelDist.pdf}
-  {\caption{\label{fModelDist}Scene Data in eqPly}}
-\end{wrapfigure}
 The identifier of the model's root object of this distributed hierarchy
 is passed as part of the \textsf{InitData} for the default model, or as
 part of the \textsf{View} for each logical view. It is used on the
@@ -2077,11 +1983,11 @@ void VertexBufferDist::getInstanceData( eq::net::DataOStream& os )
 }
 \end{lstlisting}}%>>
 
-\begin{wrapfigure}{r}{.618\textwidth}
-%\begin{figure}[ht!]\center
+%\begin{wrapfigure}{r}{.618\textwidth}
+\begin{figure}[ht!]\center
   \includegraphics[width=.618\textwidth]{images/objects.pdf}
   {\caption{\label{fObjects}Scene Graph Distribution}}
-\end{wrapfigure}
+\end{figure}
 Applications distributing a dynamic scene graph use the frame data
 instead of the init data as the entry point to their scene graph data
 structure. \fig{fObjects} shows one possible implementation, where the
@@ -2656,7 +2562,7 @@ all data specific to the OpenGL context.
 
 \begin{wrapfigure}{r}{.618\textwidth}
   \vspace{-2ex}\includegraphics[width=.618\textwidth]{images/osWindow.pdf}
-  {\caption{\label{fOSWindow}eq::OSWindow UML Class Hierarchy}}\vspace{-4ex}
+  {\caption{\label{fOSWindow}eq::OSWindow UML Class Hierarchy}}
 \end{wrapfigure}
 The particulars of creating a window and OpenGL context depend on the
 window system used. One can either use the implementation provided by
@@ -3339,7 +3245,7 @@ struct ConfigEvent : public eq::ConfigEvent
 public:
     enum Type
     {
-        READBACK = eq::ConfigEvent::USER,
+        READBACK = eq::Event::USER,
         ASSEMBLE
     };
 
@@ -4030,15 +3936,15 @@ since it resets the config's running state.
 
 \subsubsection{View Frustum Update}
 
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/viewUML.pdf}
+  {\caption{\label{fViewUML}UML Hierarchy of \textsf{eqPly::View}}}
+\end{wrapfigure}
 Changing view frustum parameters is typically done for non-fullscreen
 application windows and multi-view layouts, where the rendering is not
 meant to be viewed in real-world size in an immersive environment. A
 typical use case is changing the field-of-view of the rendering.
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/viewUML.pdf}
-  {\caption{\label{fViewUML}UML Hierarchy of \textsf{eqPly::View}}}
-\end{wrapfigure}
 A view is derived from \textsf{eq::Frustum} (\fig{fViewUML}), and the
 application process can set the wall or projection parameters at
 runtime. For a description of wall and projection parameters please refer
@@ -4139,10 +4045,6 @@ API, the direct send parallel compositing algorithm is introduced in this
 section. Other parallel compositing algorithms, e.g. binary-swap, can
 also be expressed through an Equalizer configuration file.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/directSend.pdf}
-  {\caption{\label{fDirectSend}Direct Send Compositing}}
-\end{wrapfigure}
 The main idea behind direct send is to parallelize the costly
 recomposition for database (sort-last) decomposition. With each
 additional source channel, the amount of pixel data to be composited
@@ -4152,6 +4054,10 @@ in the system. Direct send distributes this workload evenly across all
 source channels, and thereby keeps the compositing work per channel
 constant.
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/directSend.pdf}
+  {\caption{\label{fDirectSend}Direct Send Compositing}}
+\end{wrapfigure}
 In direct send compositing, each rendering channel is also responsible
 for the sort-last composition of one screen-space tile. He receives
 the framebuffer pixels for his tile from all the other channels. The
@@ -4195,10 +4101,6 @@ An \textsf{eq::Image} holds a
 two-dimensional snapshot of the framebuffer and can contain color and/or
 depth information.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/assembly.pdf}
-  {\caption{\label{fAssembly}Hierarchy of Assembly Classes}}
-\end{wrapfigure}
 The frame synchronization through the frame data allows the input frame
 to wait for the pixel data to become ready, which is signaled by the
 output frame after readback.
@@ -4216,6 +4118,10 @@ Currently, only synchronous readback and assembly using
 respective start method of the image. Later versions of Equalizer will
 implement asynchronous pixel transfers.
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/assembly.pdf}
+  {\caption{\label{fAssembly}Hierarchy of Assembly Classes}}
+\end{wrapfigure}
 The offset of input and output frames characterizes the position of the
 frame data relative to the framebuffer, that is, the \textbf{window's}
 lower-left corner. For output frames this is the position of the channel
@@ -4271,7 +4177,7 @@ potentially using GLSL for better performance.
 
 \begin{wrapfigure}{r}{.382\textwidth}
   \includegraphics[width=.382\textwidth]{images/slices.pdf}
-  {\caption{\label{fSlices}Volume Rendering using 3D Textures}}
+  {\caption{\label{fSlices}Volume Rendering using 3D Textures}}\vspace{-2ex}
 \end{wrapfigure}
 The \textsf{eVolve} example is a scalable volume renderer. It uses 3D
 texture-based volume rendering, where the 3D texture is intersected by
@@ -4811,7 +4717,7 @@ registering a \textsf{eq::net::CommandFunc} for these commands, the
 \textsf{eq::net::Base} dispatch and invoke mechanism can be used
 automatically.
 
-\subsection{Session}
+\subsection{Sessions}
 
 The \textsf{eq::net::Session} gathers provides higher-level
 functionality to a set of nodes. The master instance of a session is
@@ -4847,16 +4753,195 @@ than \textsf{CMD\_SESSION\_CUSTOM} and registering a command function
 for these commands.
 
 
-\subsection{\label{sNetObject2}Object}
+\subsection{\label{sNetObject2}Objects}
 
-Distributed objects provide powerful, object-oriented data
-distribution for C++ objects. Their functionality and an example use
-case for parallel rendering has been described in \sref{sNetObject}.
+Distributed objects provide powerful, object-oriented data distribution for C++
+objects. They facilitate the implementation of data distribution in a cluster
+environment. Their functionality and an example use case for parallel rendering
+has been described in \sref{sNetObject}.
 
-The master instance of an \textsf{eq::net::Object} is registered with a
-session, which assigns a session-unique identifier to the object. Using
-this identifier, other nodes can map their slave instance of the object
-to their local proxy of the session.
+Distributed objects are created by subclassing from \textsf{eq::Object} or
+\textsf{eq::net::Object}. The application programmer implements serialization
+and deserialization of the distributed data. Objects are dynamically assigned to
+a session, which assigns session-unique identifiers to objects and manages the
+network communication between different instances of the same distributed
+object.
+
+The master version of a distributed object is registered with a
+\textsf{eq::net::Session}, which assigns a session-unique identifier to
+the object. This identifier can be used by other nodes to map their
+instance of the object, thus synchronizing the object's data with the
+remotely registered master version.
+
+Distributed objects can be static (immutable) or dynamic. Dynamic objects are
+versioned. New versions are commited from the master instance, which sends
+the delta between the previous and current version to all mapped slave
+objects. The slave objects sync the queued deltas when they need a version.
+
+\subsubsection{Common Usage for Parallel Rendering}
+
+Distributed objects are addressed using session-unique identifiers,
+because pointers to other objects cannot be distributed directly; they
+have no meaning on remote nodes. The session used to register
+distributed objects is normally the \textsf{eq::Config}, which is
+sub-classed from \textsf{eq::net::Session}.
+
+The entry point for shared data on a render client is the identifier
+passed by the application to \textsf{Config::init}. This identifier
+typically contains the identifier of a static distributed object, and is
+passed by Equalizer to all \textsf{configInit} task methods. Normally
+this initial object is mapped by the render clients in
+\textsf{Node::configInit}. It normally contains identifiers of other
+shared data objects.
+
+The distributed data objects referenced by the initial data object are
+often versioned objects, to keep them in sync with the rendered
+frames. Similar to the initial identifier passed to
+\textsf{Config::init}, an object identifier or object version can be
+passed to \textsf{Config::startFrame}. Equalizer will pass this
+identifier to all \textsf{frameStart} task methods. In \textsf{eqPly},
+the frame-specific data, e.g., the global camera data, is versioned. The
+frame data identifier is passed in the initial data, and the frame data
+version is passed with each new frame request.
+
+\begin{wrapfigure}{r}{.382\textwidth}
+%\begin{figure}[h!t]
+  \subfigure[]{\label{fObjectDist1}
+    \includegraphics[width=.382\textwidth]{images/umlObjectSubclass}}\hfil
+  \subfigure[]{\label{fObjectDist2}
+    \includegraphics[width=.382\textwidth]{images/umlObjectProxy}}\hfil
+  \subfigure[]{\label{fObjectDist3}
+    \includegraphics[width=.382\textwidth]{images/umlObjectMI}}%
+  {\caption{\label{fObjectDist}Object Distribution using Subclassing,
+      Proxies or Multiple Inheritance}}
+\end{wrapfigure}
+There are multiple ways of implementing data distribution for an
+existing C++ class hierarchy, such as a scene graph:
+\begin{description}
+\item[Subclassing] The classes to be distributed inherit from
+  \textsf{eq::net::Object} and implement the serialization methods. This
+  approach is recommended if the source code of existing classes can be
+  modified. It is used for \textsf{eqPly::InitData} and
+  \textsf{eqPly::FrameData}. (\fig{fObjectDist1})
+\item[Proxies] For each object to be distributed, a proxy object is
+  created which manages data distribution for its associated
+  object. This requires the application to track changes on the object
+  separately from the object itself. The model data distribution of
+  eqPly is using this pattern. (\fig{fObjectDist2})
+\item[Multiple Inheritance] A new class inheriting from the class to be
+  distributed and from \textsf{eq::net::Object} implements the data
+  distribution. This requires the application to instantiate a different
+  type of object instead of the existing object, and to create wrapper
+  methods in the superclass calling the original method and setting the
+  appropriate dirty flags. This pattern is not used in
+  eqPly. (\fig{fObjectDist3})
+\end{description}
+
+\subsubsection{Change Handling and Serialization}
+
+Equalizer determines the way changes are to be handled by calling
+\textsf{Object::get\-Change\-Type} during the registration of the master version
+of a distributed object. The change type determines the memory footprint and the
+contract for the serialization methods. The deserialization always happens in
+the application thread causing the deserialization. The following change types
+are possible:
+
+\begin{description}
+  \item[STATIC] The object is not versioned. The instance data is serialized
+    whenever a new slave instance is mapped. The serialization happens in the
+    command thread on the master node, i.e., in parallel to the application
+    threads. Since the object's distributed data is supposed to be static, this
+    should not create any race conditions. No additional data is stored.
+  \item[INSTANCE] The object is versioned, and the instance and delta data is
+    identical, that is, only instance data is serialized. The serialization
+    always happens before \textsf{Session::registerObject} or
+    \textsf{Object::commit} returns. Previous instance data is saved to be able
+    to map old versions.
+  \item[DELTA] The object is versioned, and the delta data is typically smaller
+    than the instance data. Both the delta and instance data are serialized
+    before \textsf{Object::commit} returns. Previous instance data is saved to
+    be able to map old versions.
+  \item[UNBUFFERED] The object is versioned. No data is stored, and no previous
+    versions can be mapped. The instance data is serialized from the command
+    thread whenever a new slave instance is mapped, i.e., in parallel to
+    application threads. The application has to ensure that this does not create
+    any thread conflicts. The delta data is serialized before
+    \textsf{Object::commit} returns. The application may choose to use a
+    different, more optimal implementation to pack deltas by using a different
+    implementation for \textsf{getInstanceData} and \textsf{pack}.
+\end{description}
+
+
+\subsubsection{\label{sSlaveCommit}Slave Object Commit}
+
+\begin{wrapfigure}{r}{.618\textwidth}
+  \vspace{-2ex}\includegraphics[width=.618\textwidth]{images/slaveWrites.pdf}
+  {\caption{\label{fSlaveCommit}Slave Commit Communication Sequence}}
+\end{wrapfigure}
+Versioned slave objects may also commit data to the master instance. However,
+this requires the implementation to take special care to resolve conflicts
+during deserialization. The algorithm and constraints for slave object commits
+are explained in this section.
+
+When using \textsf{commit} on slave object instances, multiple modifications on
+the same database may happen simultaneously. In order to avoid excessive
+synchronization in the network layer, Equalizer a light-weight approach which
+requires the application to avoid or handle conflicting changes on the same
+object.
+
+When a slave object instance commits data, \textsf{pack} is called on the
+object. The data serialized by \textsf{pack} is send to the master instance of
+the object. On the master instance, \textsf{notifyNewVersion} is called from the
+command thread to signal the data availability. No new version is generated on
+the slave instance.
+
+The master instance can \textsf{sync} delta data received from slaves. The data
+is synchronized in the order it has been received from the slaves. If a specific
+order is needed, it is the application's responsibity to serialize the slave
+commits accordingly. When using \textsf{VERSION\_NEXT} as the version parameter
+to \textsf{sync}, one slave commit is unpacked. This call may block if no data
+is pending. When using \textsf{VERSION\_HEAD} all pending versions are
+unpacked. This call will never block.
+
+Synchronizing slave data on a master instance does not create a new version. The
+application has to explicitly call \textsf{commit} to pack the changed data,
+which will create a new version send to all slaves.
+
+This approach requires the application to handle or avoid, if possible, the
+following situations:
+\begin{itemize}
+\item A slave instance will always receive its own changes when the master
+  commits the slave change.
+\item A slave instance commits data which does not correspond to the last
+  version of the master instance.
+\item Two different slave instances commit changes simultaneously which may
+  result in conflicts.
+\item A master instance applies data to an already changed database.
+\item The master instance commits a new version while a slave instance is
+  modifying its instance. 
+\end{itemize}
+
+\fig{fSlaveCommit} depicts one possible communication sequence. In general, it
+is best to adhere to the following rules:
+\begin{itemize}
+\item Handle the case that a slave instance will receive its own changes again.
+\item Write your application code so that only one object instance is modified
+  at any given time. 
+\item When multiple slave instances have to modify the same object at the same
+  time, try to modify and serialize disjunct data of the object.
+\item Before modifying a slave instance, \textsf{sync} it to the head version.
+\item Write serialization code defensively, e.g.:
+  \begin{itemize}
+  \item When adding a new child to an object, check that it has not been added
+    already.
+    \item When removing a child, transmit the child's identifier instead of its
+      index for removal.
+    \item Modify a variable by serializing its value (instead of an operation on
+      it) so that the last change will win.
+  \end{itemize}
+\end{itemize}
+
+\subsubsection{Communication between Object Instances}
 
 Objects can send command packets to each other by subclassing
 \textsf{eq::net::Ob\-ject\-Packet}, which is derived from
@@ -4867,7 +4952,7 @@ Multiple instances of the same object (identifier) can be mapped on the
 same node and session simultaneously. Each object instance has a
 node-unique instance identifier. When the instance ID is set to
 \textsf{EQ\_ID\_ANY} (the default value), a command is dispatch to all
-object instance registered to the session with the correct object
+object instances registered to the session with the correct object
 ID. Multiple object instance per node are used when different threads on
 the node need to process a different version of the same object.
 
@@ -4875,10 +4960,9 @@ the node need to process a different version of the same object.
   \includegraphics[width=.618\textwidth]{images/netObject.pdf}
   {\caption{\label{fNetObject}Communication between two Objects}}
 \end{wrapfigure}
-Distributed objects provide data synchronization functionality, as
-described in \sref{sNetObject}. Additionally, applications can send
-command packets by creating custom object packets with a command greater
-than \textsf{CMD\_OBJECT\_CUSTOM}.
+Distributed objects provide data synchronization functionality, as described
+above. Additionally, applications can send command packets by creating custom
+object packets with a command greater than \textsf{CMD\_OBJECT\_CUSTOM}.
 
 Distributed object communication relies on the lower node and session
 communication layers, as shown in \fig{fNetObject}.
